# serializer version: 1
# name: TestDescribeMethodPool.test_describe_pool_aggregated[event]
  '''
  ,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  count,10.0,10.0,10.0,10,10,10
  mean,11.5,3.014495674194157,8.9,291 days 00:00:00,24 days 09:36:00,27 days 15:30:56.275230695
  std,3.6590830666833583,0.3937906288464474,2.3309511649396115,34 days 21:40:22.681968021,6 days 22:44:17.224862808,12 days 20:54:30.667546030
  min,7.0,2.2359263506290326,5.0,226 days 00:00:00,14 days 00:00:00,11 days 10:41:05.446149391
  25%,8.75,2.8364488137502333,7.5,269 days 00:00:00,20 days 09:00:00,17 days 08:04:47.712742452
  50%,11.0,3.095795255000934,9.0,292 days 12:00:00,23 days 06:00:00,26 days 02:33:36.038482282
  75%,13.0,3.238901256602631,10.0,314 days 06:00:00,29 days 15:00:00,33 days 15:24:18.017943813
  max,18.0,3.452819531114783,12.0,339 days 00:00:00,34 days 12:00:00,48 days 07:02:42.447225925
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_aggregated[interval]
  '''
  ,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  count,10.0,10.0,10.0,10,10,10,10
  mean,5.1,2.257573615689407,5.0,208 days 02:24:00,18 days 07:05:49.714285714,17 days 15:36:00,7 days 17:22:08.873399236
  std,1.5238839267549948,0.4390877639815791,1.4142135623730951,58 days 02:05:17.120539870,2 days 00:23:33.910679617,3 days 09:23:52.039203906,2 days 10:28:22.984292059
  min,3.0,1.584962500721156,3.0,114 days 00:00:00,13 days 14:24:00,11 days 00:00:00,4 days 03:32:05.706585503
  25%,4.0,2.0,4.0,166 days 18:00:00,17 days 12:00:00,16 days 06:00:00,6 days 03:26:01.623496265
  50%,5.5,2.4217843656153404,5.5,219 days 00:00:00,19 days 07:42:51.428571428,17 days 06:00:00,8 days 13:20:09.319508527
  75%,6.0,2.584962500721156,6.0,252 days 00:00:00,19 days 16:00:00,20 days 00:00:00,9 days 00:33:10.594561642
  max,7.0,2.807354922057604,7.0,289 days 00:00:00,19 days 20:00:00,23 days 00:00:00,11 days 17:35:43.636231567
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_aggregated[state]
  '''
  ,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  count,10.0,10.0,10.0,10,10.0,10,10,10
  mean,2.7,1.3084962500721156,2.6,364 days 00:00:00,1.7,148 days 15:12:00,147 days 08:24:00,174 days 00:51:37.913480820
  std,0.9486832980505138,0.4269376436598435,0.8432740427115678,0 days 00:00:00,0.9486832980505139,43 days 22:58:20.017641328,44 days 18:16:54.838881394,81 days 18:12:03.000926885
  min,2.0,1.0,2.0,364 days 00:00:00,1.0,91 days 00:00:00,93 days 12:00:00,62 days 07:51:00.935588380
  25%,2.0,1.0,2.0,364 days 00:00:00,1.0,98 days 14:00:00,95 days 18:00:00,84 days 23:38:40.032481604
  50%,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  75%,3.75,1.563721875540867,3.0,364 days 00:00:00,2.75,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  max,4.0,2.0,4.0,364 days 00:00:00,3.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_per_sequence[event]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,11,3.095795255000934,9,339 days,30 days 00:00:00,28 days 01:45:17.465614296
  2,16,3.452819531114783,12,290 days,16 days 00:00:00,16 days 09:23:07.106282217
  3,13,3.238901256602631,10,316 days,22 days 12:00:00,20 days 04:09:49.532123159
  4,11,3.095795255000934,9,226 days,24 days 00:00:00,14 days 08:30:07.053680957
  5,18,3.4193819456463714,12,329 days,20 days 00:00:00,11 days 10:41:05.446149391
  6,13,3.238901256602631,10,309 days,21 days 12:00:00,24 days 03:21:54.611350268
  7,7,2.5216406363433186,6,263 days,34 days 12:00:00,46 days 16:43:00.888270800
  8,8,2.75,7,295 days,33 days 00:00:00,33 days 20:02:26.935082653
  9,7,2.2359263506290326,5,256 days,28 days 12:00:00,48 days 07:02:42.447225925
  10,11,3.095795255000934,9,287 days,14 days 00:00:00,33 days 01:29:51.266527292
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_per_sequence[interval]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,5,2.321928094887362,5,255 days,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  2,6,2.584962500721156,6,237 days,19 days 20:00:00,18 days 12:00:00,8 days 10:10:48.423780666
  3,3,1.584962500721156,3,201 days,19 days 16:00:00,23 days 00:00:00,9 days 10:50:20.940216450
  4,6,2.584962500721156,6,243 days,17 days 08:00:00,15 days 00:00:00,8 days 16:29:30.215236389
  5,6,2.584962500721156,6,264 days,18 days 00:00:00,17 days 12:00:00,4 days 03:32:05.706585503
  6,7,2.807354922057604,7,143 days,19 days 03:25:42.857142857,17 days 00:00:00,9 days 01:04:36.053924330
  7,3,1.584962500721156,3,114 days,19 days 16:00:00,21 days 00:00:00,4 days 03:55:11.884707747
  8,7,2.5216406363433186,6,289 days,19 days 17:08:34.285714285,17 days 00:00:00,8 days 22:58:54.216473578
  9,4,2.0,4,169 days,16 days 12:00:00,16 days 00:00:00,5 days 23:19:54.418574464
  10,4,2.0,4,166 days,19 days 12:00:00,20 days 12:00:00,11 days 17:35:43.636231567
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_per_sequence[state]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  2,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  3,3,1.584962500721156,3,364 days,2,121 days 08:00:00,94 days 00:00:00,121 days 07:57:21.757047426
  4,4,1.5,3,364 days,3,91 days 00:00:00,94 days 12:00:00,72 days 20:52:26.124292996
  5,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  6,4,2.0,4,364 days,3,91 days 00:00:00,93 days 12:00:00,62 days 07:51:00.935588380
  7,4,2.0,4,364 days,3,91 days 00:00:00,99 days 12:00:00,66 days 18:55:02.425265932
  8,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  9,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  10,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_with_dropna_false[event]
  '''
  ,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  count,10.0,10.0,10.0,10,10,10
  mean,11.5,3.014495674194157,8.9,291 days 00:00:00,24 days 09:36:00,27 days 15:30:56.275230695
  std,3.6590830666833583,0.3937906288464474,2.3309511649396115,34 days 21:40:22.681968021,6 days 22:44:17.224862808,12 days 20:54:30.667546030
  min,7.0,2.2359263506290326,5.0,226 days 00:00:00,14 days 00:00:00,11 days 10:41:05.446149391
  25%,8.75,2.8364488137502333,7.5,269 days 00:00:00,20 days 09:00:00,17 days 08:04:47.712742452
  50%,11.0,3.095795255000934,9.0,292 days 12:00:00,23 days 06:00:00,26 days 02:33:36.038482282
  75%,13.0,3.238901256602631,10.0,314 days 06:00:00,29 days 15:00:00,33 days 15:24:18.017943813
  max,18.0,3.452819531114783,12.0,339 days 00:00:00,34 days 12:00:00,48 days 07:02:42.447225925
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_with_dropna_false[interval]
  '''
  ,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  count,10.0,10.0,10.0,10,10,10,10
  mean,5.1,2.257573615689407,5.0,208 days 02:24:00,18 days 07:05:49.714285714,17 days 15:36:00,7 days 17:22:08.873399236
  std,1.5238839267549948,0.4390877639815791,1.4142135623730951,58 days 02:05:17.120539870,2 days 00:23:33.910679617,3 days 09:23:52.039203906,2 days 10:28:22.984292059
  min,3.0,1.584962500721156,3.0,114 days 00:00:00,13 days 14:24:00,11 days 00:00:00,4 days 03:32:05.706585503
  25%,4.0,2.0,4.0,166 days 18:00:00,17 days 12:00:00,16 days 06:00:00,6 days 03:26:01.623496265
  50%,5.5,2.4217843656153404,5.5,219 days 00:00:00,19 days 07:42:51.428571428,17 days 06:00:00,8 days 13:20:09.319508527
  75%,6.0,2.584962500721156,6.0,252 days 00:00:00,19 days 16:00:00,20 days 00:00:00,9 days 00:33:10.594561642
  max,7.0,2.807354922057604,7.0,289 days 00:00:00,19 days 20:00:00,23 days 00:00:00,11 days 17:35:43.636231567
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_pool_with_dropna_false[state]
  '''
  ,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  count,10.0,10.0,10.0,10,10.0,10,10,10
  mean,2.7,1.3084962500721156,2.6,364 days 00:00:00,1.7,148 days 15:12:00,147 days 08:24:00,174 days 00:51:37.913480820
  std,0.9486832980505138,0.4269376436598435,0.8432740427115678,0 days 00:00:00,0.9486832980505139,43 days 22:58:20.017641328,44 days 18:16:54.838881394,81 days 18:12:03.000926885
  min,2.0,1.0,2.0,364 days 00:00:00,1.0,91 days 00:00:00,93 days 12:00:00,62 days 07:51:00.935588380
  25%,2.0,1.0,2.0,364 days 00:00:00,1.0,98 days 14:00:00,95 days 18:00:00,84 days 23:38:40.032481604
  50%,2.0,1.0,2.0,364 days 00:00:00,1.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  75%,3.75,1.563721875540867,3.0,364 days 00:00:00,2.75,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  max,4.0,2.0,4.0,364 days 00:00:00,3.0,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_timestep_pool[event]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,4,2.0,4,8.5,2.5,0.5773502691896257
  2,4,2.0,4,7.5,2.5,1.0
  3,4,2.0,4,10.0,3.5,0.28867513459481287
  4,4,2.0,4,9.0,3.5,0.8660254037844386
  5,4,2.0,4,6.0,2.5,0.8660254037844386
  6,4,2.0,4,11.5,4.5,1.1547005383792515
  7,4,2.0,4,8.0,3.0,1.0408329997330665
  8,4,2.0,4,10.5,3.0,0.8660254037844386
  9,4,2.0,4,9.5,3.0,1.2583057392117918
  10,4,2.0,4,7.5,2.5,1.0
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_timestep_pool[interval]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,3,1.584962500721156,3,8.5,2.8333333333333335,2.5,0.5773502691896257
  2,3,1.584962500721156,3,7.5,2.5,2.5,1.0
  3,3,1.584962500721156,3,10.0,3.3333333333333335,3.5,0.28867513459481287
  4,3,1.584962500721156,3,9.0,3.0,3.5,0.8660254037844386
  5,3,1.584962500721156,3,6.0,2.0,2.5,0.8660254037844386
  6,3,1.584962500721156,3,11.5,3.8333333333333335,4.5,1.1547005383792515
  7,3,1.584962500721156,3,8.0,2.6666666666666665,3.0,1.0408329997330665
  8,3,1.584962500721156,3,10.5,3.5,3.0,0.8660254037844386
  9,3,1.584962500721156,3,9.5,3.1666666666666665,3.0,1.2583057392117918
  10,3,1.584962500721156,3,7.5,2.5,2.5,1.0
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_timestep_pool[state]
  '''
  patient_id,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,3,1.584962500721156,3,8.5,2,2.8333333333333335,2.5,0.5773502691896257
  2,3,1.584962500721156,3,7.5,2,2.5,2.5,1.0
  3,3,1.584962500721156,3,10.0,2,3.3333333333333335,3.5,0.28867513459481287
  4,3,1.584962500721156,3,9.0,2,3.0,3.5,0.8660254037844386
  5,3,1.584962500721156,3,6.0,2,2.0,2.5,0.8660254037844386
  6,3,1.584962500721156,3,11.5,2,3.8333333333333335,4.5,1.1547005383792515
  7,3,1.584962500721156,3,8.0,2,2.6666666666666665,3.0,1.0408329997330665
  8,3,1.584962500721156,3,10.5,2,3.5,3.0,0.8660254037844386
  9,3,1.584962500721156,3,9.5,2,3.1666666666666665,3.0,1.2583057392117918
  10,3,1.584962500721156,3,7.5,2,2.5,2.5,1.0
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_timestep_pool_aggregated[event]
  '''
  ,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  count,10.0,10.0,10.0,10.0,10.0,10.0
  mean,4.0,2.0,4.0,8.8,3.05,0.8917940892461864
  std,0.0,0.0,0.0,1.636391694484477,0.6433419688539594,0.28160249575170787
  min,4.0,2.0,4.0,6.0,2.5,0.28867513459481287
  25%,4.0,2.0,4.0,7.625,2.5,0.8660254037844386
  50%,4.0,2.0,4.0,8.75,3.0,0.9330127018922193
  75%,4.0,2.0,4.0,9.875,3.375,1.0306247497998
  max,4.0,2.0,4.0,11.5,4.5,1.2583057392117918
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_timestep_pool_aggregated[interval]
  '''
  ,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  count,10.0,10.0,10.0,10.0,10.0,10.0,10.0
  mean,3.0,1.584962500721156,3.0,8.8,2.9333333333333336,3.05,0.8917940892461864
  std,0.0,0.0,0.0,1.636391694484477,0.5454638981614923,0.6433419688539594,0.28160249575170787
  min,3.0,1.584962500721156,3.0,6.0,2.0,2.5,0.28867513459481287
  25%,3.0,1.584962500721156,3.0,7.625,2.5416666666666665,2.5,0.8660254037844386
  50%,3.0,1.584962500721156,3.0,8.75,2.916666666666667,3.0,0.9330127018922193
  75%,3.0,1.584962500721156,3.0,9.875,3.291666666666667,3.375,1.0306247497998
  max,3.0,1.584962500721156,3.0,11.5,3.8333333333333335,4.5,1.2583057392117918
  
  '''
# ---
# name: TestDescribeMethodPool.test_describe_timestep_pool_aggregated[state]
  '''
  ,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  count,10.0,10.0,10.0,10.0,10.0,10.0,10.0,10.0
  mean,3.0,1.584962500721156,3.0,8.8,2.0,2.9333333333333336,3.05,0.8917940892461864
  std,0.0,0.0,0.0,1.636391694484477,0.0,0.5454638981614923,0.6433419688539594,0.28160249575170787
  min,3.0,1.584962500721156,3.0,6.0,2.0,2.0,2.5,0.28867513459481287
  25%,3.0,1.584962500721156,3.0,7.625,2.0,2.5416666666666665,2.5,0.8660254037844386
  50%,3.0,1.584962500721156,3.0,8.75,2.0,2.916666666666667,3.0,0.9330127018922193
  75%,3.0,1.584962500721156,3.0,9.875,2.0,3.291666666666667,3.375,1.0306247497998
  max,3.0,1.584962500721156,3.0,11.5,2.0,3.8333333333333335,4.5,1.2583057392117918
  
  '''
# ---
# name: TestSummarizerSeqPool.test_add_to_static[event]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,median_gap,gap_std
  1,F,81,PUBLIC,True,11,3.0957952,9,339 days,30 days 00:00:00,28 days 01:45:17.465614296
  2,M,31,PRIVATE,False,16,3.4528196,12,290 days,16 days 00:00:00,16 days 09:23:07.106282217
  3,M,22,MIXED,False,13,3.2389011,10,316 days,22 days 12:00:00,20 days 04:09:49.532123159
  4,F,79,PUBLIC,False,11,3.0957952,9,226 days,24 days 00:00:00,14 days 08:30:07.053680957
  5,M,35,MIXED,False,18,3.4193819,12,329 days,20 days 00:00:00,11 days 10:41:05.446149391
  6,F,68,PUBLIC,False,13,3.2389011,10,309 days,21 days 12:00:00,24 days 03:21:54.611350268
  7,M,80,MIXED,False,7,2.5216405,6,263 days,34 days 12:00:00,46 days 16:43:00.888270800
  8,M,83,PRIVATE,True,8,2.75,7,295 days,33 days 00:00:00,33 days 20:02:26.935082653
  9,F,68,MIXED,True,7,2.2359264,5,256 days,28 days 12:00:00,48 days 07:02:42.447225925
  10,F,84,MIXED,False,11,3.0957952,9,287 days,14 days 00:00:00,33 days 01:29:51.266527292
  
  '''
# ---
# name: TestSummarizerSeqPool.test_add_to_static[interval]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,mean_duration,median_duration,duration_std
  1,F,81,PUBLIC,True,5,2.321928,5,255 days,13 days 14:24:00,11 days 00:00:00,6 days 15:44:23.238261671
  2,M,31,PRIVATE,False,6,2.5849626,6,237 days,19 days 20:00:00,18 days 12:00:00,8 days 10:10:48.423780666
  3,M,22,MIXED,False,3,1.5849625,3,201 days,19 days 16:00:00,23 days 00:00:00,9 days 10:50:20.940216450
  4,F,79,PUBLIC,False,6,2.5849626,6,243 days,17 days 08:00:00,15 days 00:00:00,8 days 16:29:30.215236389
  5,M,35,MIXED,False,6,2.5849626,6,264 days,18 days 00:00:00,17 days 12:00:00,4 days 03:32:05.706585503
  6,F,68,PUBLIC,False,7,2.807355,7,143 days,19 days 03:25:42.857142857,17 days 00:00:00,9 days 01:04:36.053924330
  7,M,80,MIXED,False,3,1.5849625,3,114 days,19 days 16:00:00,21 days 00:00:00,4 days 03:55:11.884707747
  8,M,83,PRIVATE,True,7,2.5216405,6,289 days,19 days 17:08:34.285714285,17 days 00:00:00,8 days 22:58:54.216473578
  9,F,68,MIXED,True,4,2.0,4,169 days,16 days 12:00:00,16 days 00:00:00,5 days 23:19:54.418574464
  10,F,84,MIXED,False,4,2.0,4,166 days,19 days 12:00:00,20 days 12:00:00,11 days 17:35:43.636231567
  
  '''
# ---
# name: TestSummarizerSeqPool.test_add_to_static[state]
  '''
  patient_id,gender,age,insurance,chronic_condition,length,entropy,vocabulary_size,temporal_span,n_transitions,mean_duration,median_duration,duration_std
  1,F,81,PUBLIC,True,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  2,M,31,PRIVATE,False,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  3,M,22,MIXED,False,3,1.5849625,3,364 days,2,121 days 08:00:00,94 days 00:00:00,121 days 07:57:21.757047426
  4,F,79,PUBLIC,False,4,1.5,3,364 days,3,91 days 00:00:00,94 days 12:00:00,72 days 20:52:26.124292996
  5,M,35,MIXED,False,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  6,F,68,PUBLIC,False,4,2.0,4,364 days,3,91 days 00:00:00,93 days 12:00:00,62 days 07:51:00.935588380
  7,M,80,MIXED,False,4,2.0,4,364 days,3,91 days 00:00:00,99 days 12:00:00,66 days 18:55:02.425265932
  8,M,83,PRIVATE,True,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  9,F,68,MIXED,True,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  10,F,84,MIXED,False,2,1.0,2,364 days,1,182 days 00:00:00,182 days 00:00:00,236 days 04:10:04.648768912
  
  '''
# ---
# name: TestSummarizerSeqPool.test_statistics_snapshot[event]
  "{'total_sequences': 10, 'avg_length': 11.5, 'min_length': 7, 'max_length': 18, 'vocab_size': 30}"
# ---
# name: TestSummarizerSeqPool.test_statistics_snapshot[interval]
  "{'total_sequences': 10, 'avg_length': 5.1, 'min_length': 3, 'max_length': 7, 'vocab_size': 41}"
# ---
# name: TestSummarizerSeqPool.test_statistics_snapshot[state]
  "{'total_sequences': 10, 'avg_length': 2.7, 'min_length': 2, 'max_length': 4, 'vocab_size': 18}"
# ---
# name: TestSummarizerSeqPool.test_statistics_timestep_pool[event]
  "{'total_sequences': 10, 'avg_length': 4.0, 'min_length': 4, 'max_length': 4, 'vocab_size': 12}"
# ---
# name: TestSummarizerSeqPool.test_statistics_timestep_pool[interval]
  "{'total_sequences': 10, 'avg_length': 3.0, 'min_length': 3, 'max_length': 3, 'vocab_size': 9}"
# ---
# name: TestSummarizerSeqPool.test_statistics_timestep_pool[state]
  "{'total_sequences': 10, 'avg_length': 3.0, 'min_length': 3, 'max_length': 3, 'vocab_size': 7}"
# ---
